--- a/WebService.Tests/WebService.Tests.csproj
+++ b/WebService.Tests/WebService.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\WebService.Core\WebService.Core.csproj" />
+    <ProjectReference Include="..\WebService.Core\WebService.Core.csproj" />
     <ProjectReference Include="..\WebService.DAL\WebService.DAL.csproj" />
     <ProjectReference Include="..\WebService\WebService.csproj" />
   </ItemGroup>
