--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\WebService.BLL\WebService.BLL.csproj" />
-    <ProjectReference Include="..\..\WebService.Core\WebService.Core.csproj" />
+    <ProjectReference Include="..\WebService.Core\WebService.Core.csproj" />
     <ProjectReference Include="..\WebService.DAL\WebService.DAL.csproj" />
   </ItemGroup>
 
