--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -22,4 +22,13 @@
     <ProjectReference Include="..\WebService.DAL\WebService.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="autofac.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
