--- a/WebService.BLL/WebService.BLL.csproj
+++ b/WebService.BLL/WebService.BLL.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.10" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WebService.Core\WebService.Core.csproj" />
     <ProjectReference Include="..\WebService.DAL\WebService.DAL.csproj" />
   </ItemGroup>
